fix: move from Collapsable to Tabs in modifyinstall
additionally fix small css bugs

--- a/src/frontend/screens/Game/GamePage/index.scss
+++ b/src/frontend/screens/Game/GamePage/index.scss
@@ -455,7 +455,7 @@
   .mainInfo,
   .tabContent {
     outline: 3px solid #8a8a8a;
-    outline-offset: -4px;
+    outline-offset: -3px;
     border-radius: 15px;
     isolation: isolate;
     position: relative;
